# dab_ai_geminiai_live

./: .env.example  .gcloudignore  .gitignore  Procfile  README.md  capture_audio.py  capture_view.py  pyproject.toml  requirements.txt  yts.py
.github/workflows/: android-build.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
prompts/: planner_system_prompt.txt
scripts/: check_vertex_auth.py  deploy_frontend_gcs.sh  gemini_live_feed_cli.py  train_local_ranker.py
static/: app-index.html  app.js  config.js  index.html  styles.css
tests/: test_android_timezone.py  test_api.py  test_app_resolver.py  test_artifacts.py  test_capabilities.py  test_capability_router.py  test_capture.py  test_dab_client.py  test_dab_transport.py  test_device_detection.py  test_execution_controller_guards.py  test_hybrid_components.py  test_ir_dataset.py  test_ir_service.py  test_ir_transport.py  test_livekit_agent.py  test_local_ml_scaffold.py  test_multi_camera_app.py  test_orchestrator_capabilities.py  test_orchestrator_direct_settings_fallback.py  test_orchestrator_guarded_commit.py  test_orchestrator_launch_resolution.py  test_planner.py  test_recovery_engine.py  test_request_normalizer_and_routing.py  test_route_selector_deterministic.py  test_run_state.py  test_schemas.py  test_vertex_integration.py  test_yts_shared_engine.py
vertex_live_dab_agent/: __init__.py  __main__.py  android_timezone.py  config.py
vertex_live_dab_agent/api/: api.py  models.py  tts_service.py
vertex_live_dab_agent/artifacts/: __init__.py  logger.py
(+102 files in other folders)
